--- a/main.css
+++ b/main.css
@@ -10,19 +10,21 @@ header {
 
 
 
-header .row,
+header .abc,
 footer .row {
   display: flex;
+  padding: 20px 0;
   align-items: center;
 }
 
 header a {
   height: 60px;
-  
+
   line-height: 60px;
   color: #000000;
   text-decoration: none;
   text-transform: uppercase;
+  white-space:nowrap;
 }
 
 header div {
@@ -86,7 +88,7 @@ section .row img {
 
 footer {
   font-size: 12px;
-  padding: 20px 0;
+  
 }
 
 footer .col-sm-8 {
@@ -104,37 +106,6 @@ footer li img {
 }
 
 
-
-/* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
-
-/* Carousel base class */
-.carousel {
-  height: 500px;
-  margin-bottom: 60px;
-}
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  z-index: 10;
-}
-
-/* Declare heights because of positioning of img element */
-.carousel .item {
-  height: 500px;
-  background-color: #777;
-}
-.carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 500px;
-}
-
-.right.carousel-control, .left.carousel-control {
-    opacity: 0;
-    filter:alpha(opacity=0); /* IE support */
-}
 
 
 /* MARKETING CONTENT
@@ -205,7 +176,9 @@ color: #FDD706;
 .featurette-divider {
   margin: 25px 0; /* Space out the Bootstrap <hr> more */
 }
-
+.featurette-image {
+  margin: 120px 0;
+}
 /* Thin out the marketing headings */
 .featurette-heading {
   font-weight: 300;
